<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.voipgrid.vialer.AccountActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"
        android:background="@drawable/background_gradient"
        android:theme="@style/ActionBar"
        app:popupTheme="@style/ActionBar_Popup" />

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:progressTint="@color/progress_bar_color"
            android:visibility="invisible" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">

                <Switch
                    android:id="@+id/account_sip_switch"
                    style="@style/AccountTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:text="@string/account_sip_switch" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/AccountTextInputLayoutStyle"
                    android:id="@+id/account_sip_id_container">

                    <EditText
                        android:id="@+id/account_sip_id_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/account_sip_id_edit_text_hint"
                        android:inputType="text" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/AccountTextInputLayoutStyle">

                    <EditText
                        android:id="@+id/account_mobile_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/account_mobile_number_edit_text_hint"
                        android:inputType="phone" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/AccountTextInputLayoutStyle">

                    <EditText
                        android:id="@+id/account_outgoing_number_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="false"
                        android:hint="@string/account_outgoing_number_edit_text_hint"/>

                </com.google.android.material.textfield.TextInputLayout>

                <Switch
                    android:id="@+id/use_3g_switch"
                    style="@style/AccountTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/switch_use_3g" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/AccountTextInputLayoutStyle">

                    <TextView
                        android:id="@+id/call_using_edit_text"
                        style="@style/AccountTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingStart="4dp"
                        android:text="@string/choose_network_text" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/call_connection_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/activity_vertical_margin" />

                <Switch
                    android:id="@+id/remote_logging_switch"
                    style="@style/AccountTextInputLayoutStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="4dp"
                    android:paddingStart="4dp"
                    android:paddingTop="@dimen/activity_vertical_margin"
                    android:text="@string/remote_logging_switch_title" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/AccountTextInputLayoutStyle"
                    android:id="@+id/remote_logging_id_container"
                    android:visibility="gone">

                    <EditText
                        android:id="@+id/remote_logging_id_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:enabled="true"
                        android:inputType="none"
                        android:hint="@string/remote_logging_input_hint"
                        android:layout_marginBottom="@dimen/activity_vertical_margin"
                         />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:hintTextAppearance="@style/AccountTextInputLayoutStyle">

                    <TextView
                        style="@style/AccountTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="4dp"
                        android:paddingStart="4dp"
                        android:paddingBottom="@dimen/activity_vertical_margin"
                        android:text="@string/advanced_settings_title" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/advanced_settings_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:visibility="visible">

                    <Switch
                        android:id="@+id/tls_switch"
                        style="@style/AccountTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingLeft="4dp"
                        android:paddingStart="4dp"
                        android:text="@string/advanced_settings_tls_switch"/>

                    <TextView android:layout_width="match_parent"
                              android:layout_height="wrap_content"
                              android:alpha="0.5"
                              android:paddingBottom="@dimen/activity_vertical_margin"
                              android:paddingLeft="4dp"
                              android:paddingStart="4dp"
                              android:text="@string/advanced_settings_tls_description"/>

                    <Switch
                        android:id="@+id/stun_switch"
                        style="@style/AccountTextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingBottom="4dp"
                        android:paddingLeft="4dp"
                        android:paddingStart="4dp"
                        android:text="@string/advanced_settings_stun_switch" />

                    <TextView android:layout_width="match_parent" android:layout_height="wrap_content"
                              android:alpha="0.5"
                              android:text="@string/advanced_settings_stun_description"
                              android:paddingLeft="4dp"
                              android:paddingStart="4dp"/>

                </LinearLayout>

            </LinearLayout>

        </ScrollView>
    </FrameLayout>

</LinearLayout>
