<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:gravity="center"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.voipgrid.vialer.onboarding.LoginFragment">

    <TextView
        android:id="@+id/title_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/HeaderTitleTextViewStyle"
        android:text="@string/login_header_label_text"
        />

    <TextView
        android:id="@+id/subtitle_label"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_below="@id/title_label"
        style="@style/HeaderSubTitleTextViewStyle"
        android:text="@string/login_header_label_subtext"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/subtitle_label"
        app:hintTextAppearance="@style/OnboardingTextInputLayoutStyle"
        >

        <EditText
            android:id="@+id/emailTextDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_edittext_hint"
            android:inputType="textEmailAddress"
            style="@style/OnboardingEditTextStyle"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/email_field"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        app:hintTextAppearance="@style/OnboardingTextInputLayoutStyle"
        app:endIconMode="password_toggle"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextDialog"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_edittext_hint"
            android:inputType="textPassword"
            style="@style/OnboardingEditTextStyle"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/password_field"
        android:enabled="false"
        android:text="@string/login_button_title"
        />

    <Button
        android:id="@+id/button_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/password_field"
        android:text="@string/forgot_password_button_title"
        style="@style/ButtonAnchorStyle"
        />

    <Button
        android:id="@+id/button_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/button_forgot_password"
        android:text="@string/info_button_title"
        style="@style/ButtonAnchorStyle"
        />

</RelativeLayout>
