...
    <string name="title_activity_setup">Setup</string>
    <string name="statistics_menu_item_title">Statistics</string>
    <string name="settings_menu_item_title">Settings</string>
    <string name="logout_menu_item_title">Logout</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="auto_login_error">WebActivity: %s</string>
    <string name="login_error">Login failed: %s</string>
    <string name="call_incoming">Incoming call</string>
    <string name="call_incoming_expanded">Incoming call from:</string>
    <string name="call_outgoing">Outgoing call</string>
    <string name="call_incoming_short">Incoming</string>
    <string name="call_outgoing_short">Outgoing</string>
    <string name="call_ended">Call ended</string>
...
